[Enhancement] Support for Python 3.9+ (#20)
* Update pyproject.toml to support both Library and standalone installations

* Code changes to support Python 3.9+

* Added Makefile, Fix unit test errors and warnings and changes to support Python 3.9+

* Added conftest to run asyncio tests in a new event loop

* Updated Makefile related changes

* Updated async tests to remove warnings

* Removed cli traces

* Updated README.md

* Updated .github tests.yaml

* Fixed unit test

* Update Makefile and UI related fixes

* Updated Grasp version to 1.0.0

* Deleted setup grasp lib shell script

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,6 +58,7 @@ nav:
       - Structured Output: tutorials/structured_output_tutorial.md
       - Structured Output with Multi-LLM: tutorials/structured_output_with_multi_llm_tutorial.md
   - GraSP Library: grasp_library.md
+  - Contribute: development.md
 plugins:
   - search
   - include-markdown
