--- a/.github/workflows/mkdocs-check.yml
+++ b/.github/workflows/mkdocs-check.yml
@@ -11,20 +11,33 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout the repo
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # Set up Python
       - name: Set up Python
+        id: setup-python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.x"
+          python-version: '3.9'
 
-      # Install dependencies
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+          virtualenvs-path: .venv
+          installer-parallel: true
+
+      - name: Load cached venv
+        id: cached-poetry-deps
+        uses: actions/cache@v4
+        with:
+          path: .venv
+          key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock', '**/pyproject.toml') }}
+
       - name: Install dependencies
-        run: |
-          pip install mkdocs mkdocs-material mkdocs-include-markdown-plugin
+        if: steps.cached-poetry-deps.outputs.cache-hit != 'true'
+        run: make setup-dev
 
       # Build MkDocs site
       - name: Build MkDocs site
