Fix Lint issues

--- a/.github/workflows/mkdocs-check.yml
+++ b/.github/workflows/mkdocs-check.yml
@@ -1,10 +1,11 @@
 name: MkDocs Check
 
 on:
+  push:
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
-      - master
+    branches: [ main ]
+    types: [ opened, synchronize, reopened, ready_for_review ]
 
 jobs:
   build:
