--- a/pyproject.toml
+++ b/pyproject.toml
@@ -139,9 +139,13 @@ check_untyped_defs = true
 disallow_untyped_decorators = false
 no_implicit_optional = true
 strict_optional = true
+exclude = [
+    "grasp/recipes/",
+    "tasks/"
+]
 
 [[tool.mypy.overrides]]
-module = ["tests.*", "grasp.recipes.*"]
+module = ["tests.*"]
 disallow_untyped_defs = false
 check_untyped_defs = false
 
