--- a/pyproject.toml
+++ b/pyproject.toml
@@ -142,7 +142,8 @@ no_implicit_optional = true
 strict_optional = true
 exclude = [
     "grasp/recipes/",
-    "tasks/"
+    "grasp/internal/",
+    "tasks/",
 ]
 
 [[tool.mypy.overrides]]
