[Enhancement] Add Lint Checks (#31)
* Fix Lint issues

* Fix Lint issues

* Fix Lint issues

* chore: format and lint files

* Fix Lint issues for client files

* Fix Lint issues for node, grasp base chat model

* Fix Lint and format issues

* Fix Lint and format issues for core

* Fix Lint and format issues for tools

* Fix Lint and format issues for tools

---------

Co-authored-by: Surajit Dasgupta <surajit.dasgupta@servicenow.com>

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,4 +1,4 @@
-name: MkDocs Check
+name: Lint
 
 on:
   push:
@@ -8,7 +8,8 @@ on:
     types: [ opened, synchronize, reopened, ready_for_review ]
 
 jobs:
-  build:
+  lint:
+    if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
     runs-on: ubuntu-latest
 
     steps:
@@ -40,6 +41,5 @@ jobs:
         if: steps.cached-poetry-deps.outputs.cache-hit != 'true'
         run: make setup-dev
 
-      # Build MkDocs site
-      - name: Build MkDocs site
-        run: make docs
+      - name: Run linters
+        run: make lint
