--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,6 +78,7 @@ mlxtend = "*"
 pandarallel = "*"
 sentence-transformers = "*"
 soundfile = "*"
+types-pyyaml = "^6.0.12.20250822"
 
 [tool.poetry.group.ui.dependencies]
 streamlit = "*"
@@ -93,8 +94,7 @@ build = "*"
 twine = "*"
 black = "*"
 isort = "*"
-flake8 = "*"
-pylint = "*"
+ruff = "*"
 mypy = "*"
 mkdocs = "*"
 mkdocs-material = "*"
@@ -130,24 +130,6 @@ use_parentheses = true
 ensure_newline_before_comments = true
 skip_gitignore = true
 
-[tool.pylint.messages_control]
-disable = [
-    "C0111", # missing-docstring
-    "C0103", # invalid-name
-    "C0330", # bad-continuation
-    "C0326", # bad-whitespace
-    "W0511", # fixme
-    "W1202", # logging-format-interpolation
-    "R0903", # too-few-public-methods
-    "R0913", # too-many-arguments
-    "R0914", # too-many-locals
-    "R0915", # too-many-statements
-]
-max-line-length = 100
-
-[tool.pylint.format]
-max-line-length = 100
-
 [tool.mypy]
 python_version = "3.9"
 warn_return_any = true
@@ -158,13 +140,14 @@ check_untyped_defs = true
 disallow_untyped_decorators = false
 no_implicit_optional = true
 strict_optional = true
+exclude = [
+    "grasp/recipes/",
+    "grasp/internal/",
+    "tasks/",
+]
 
 [[tool.mypy.overrides]]
 module = ["tests.*"]
 disallow_untyped_defs = false
 check_untyped_defs = false
 
-[tool.flake8]
-max-line-length = 100
-exclude = [".git", "__pycache__", "build", "dist", ".eggs", "venv", ".venv"]
-extend-ignore = ["E203", "W503"]
