--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -114,6 +114,7 @@ jobs:
           path: site
   # Deploy Docs
   deploy_docs:
+    if: github.ref == 'refs/heads/main'
     needs: docs_build
     runs-on: ubuntu-latest
     environment:
