--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: SyGra
-site_description: GRAph-oriented Synthetic data generation Pipeline
+site_description: Graph-oriented Synthetic data generation Pipeline
 site_url: https://servicenow.github.io/sygra/
 repo_url: https://github.com/ServiceNow/sygra
 
