--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
         with:
           path: .venv
           key: venv-${{ runner.os }}-3.9-${{ hashFiles('**/poetry.lock', '**/pyproject.toml') }}
-      - run: make format
+      - run: make check-format
   # Run Linting
   lint:
     needs: setup_sygra
@@ -70,7 +70,7 @@ jobs:
         with:
           path: .venv
           key: venv-${{ runner.os }}-3.9-${{ hashFiles('**/poetry.lock', '**/pyproject.toml') }}
-      - run: make lint
+      - run: make check-lint
   # Run Tests
   test:
     needs: setup_sygra
