--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,12 +84,15 @@ jobs:
         with:
           virtualenvs-create: true
           virtualenvs-in-project: true
-          installer-parallel: true
       - uses: actions/cache@v4
         with:
           path: .venv
-          key: venv-${{ runner.os }}-3.9-${{ hashFiles('**/poetry.lock', '**/pyproject.toml') }}
+          key: venv-${{ runner.os }}-3.9-${{ hashFiles('**/poetry.lock', '**/pyproject.toml') }}-${{ github.ref_name }}
+          restore-keys: |
+            venv-${{ runner.os }}-3.9-
+      - run: poetry install --no-interaction
       - run: make test
+
   # Build Docs
   docs_build:
     needs: setup_sygra
