--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.9'
+          python-version: '3.10'
       - uses: snok/install-poetry@v1
         with:
           virtualenvs-create: true
@@ -30,7 +30,7 @@ jobs:
       - uses: actions/cache@v4
         with:
           path: .venv
-          key: venv-${{ runner.os }}-3.9-${{ hashFiles('**/poetry.lock', '**/pyproject.toml') }}
+          key: venv-${{ runner.os }}-3.10-${{ hashFiles('**/poetry.lock', '**/pyproject.toml') }}
       - run: make setup-dev
 
   # Run Formatting
@@ -41,7 +41,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.9'
+          python-version: '3.10'
       - uses: snok/install-poetry@v1
         with:
           virtualenvs-create: true
@@ -50,7 +50,7 @@ jobs:
       - uses: actions/cache@v4
         with:
           path: .venv
-          key: venv-${{ runner.os }}-3.9-${{ hashFiles('**/poetry.lock', '**/pyproject.toml') }}
+          key: venv-${{ runner.os }}-3.10-${{ hashFiles('**/poetry.lock', '**/pyproject.toml') }}
       - run: make format
   # Run Linting
   lint:
@@ -60,7 +60,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.9'
+          python-version: '3.10'
       - uses: snok/install-poetry@v1
         with:
           virtualenvs-create: true
@@ -69,7 +69,7 @@ jobs:
       - uses: actions/cache@v4
         with:
           path: .venv
-          key: venv-${{ runner.os }}-3.9-${{ hashFiles('**/poetry.lock', '**/pyproject.toml') }}
+          key: venv-${{ runner.os }}-3.10-${{ hashFiles('**/poetry.lock', '**/pyproject.toml') }}
       - run: make lint
   # Run Tests
   test:
@@ -79,29 +79,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.9'
-      - uses: snok/install-poetry@v1
-        with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-      - uses: actions/cache@v4
-        with:
-          path: .venv
-          key: venv-${{ runner.os }}-3.9-${{ hashFiles('**/poetry.lock', '**/pyproject.toml') }}-${{ github.ref_name }}
-          restore-keys: |
-            venv-${{ runner.os }}-3.9-
-      - run: poetry install --no-interaction
-      - run: make test
-
-  # Build Docs
-  docs_build:
-    needs: setup_sygra
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.9'
+          python-version: '3.10'
       - uses: snok/install-poetry@v1
         with:
           virtualenvs-create: true
@@ -110,7 +88,26 @@ jobs:
       - uses: actions/cache@v4
         with:
           path: .venv
-          key: venv-${{ runner.os }}-3.9-${{ hashFiles('**/poetry.lock', '**/pyproject.toml') }}
+          key: venv-${{ runner.os }}-3.10-${{ hashFiles('**/poetry.lock', '**/pyproject.toml') }}
+      - run: make test
+  # Build Docs
+  docs_build:
+    needs: setup_sygra
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+      - uses: snok/install-poetry@v1
+        with:
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+          installer-parallel: true
+      - uses: actions/cache@v4
+        with:
+          path: .venv
+          key: venv-${{ runner.os }}-3.10-${{ hashFiles('**/poetry.lock', '**/pyproject.toml') }}
       - run: make docs
       - uses: actions/upload-pages-artifact@v3
         with:
