reverting to python 3.9 and setting transformer to compatible version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,7 +93,7 @@ langgraph = "*"
 mistralai = "*"
 openai = "*"
 PyYAML = "*"
-transformers = "*"
+transformers = ">=4.56,<4.57"
 grandalf = "*"
 sentencepiece = "*"
 protobuf = "*"
