Update pyproject.toml project dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ dependencies = [
   "mistralai",
   "openai",
   "PyYAML",
-  "transformers",
+  "transformers>=4.56,<4.57",
   "grandalf",
   "sentencepiece",
   "protobuf",
