--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ dependencies = [
   "mistralai>=1.9,<2.0",
   "openai>=1.107,<2.0",
   "PyYAML>=6.0,<7.0",
-  "transformers>=4.56,<5.0",
+  "transformers>=4.56,<4.57",
   "grandalf>=0.8,<1.0",
   "sentencepiece>=0.2,<1.0",
   "protobuf>=6.32,<7.0",
@@ -120,7 +120,7 @@ langgraph = "^0.6"
 mistralai = "^1.9"
 openai = "^1.107"
 PyYAML = "^6.0"
-transformers = "^4.56"
+transformers = ">=4.56,<4.57"
 grandalf = "^0.8"
 sentencepiece = "^0.2"
 protobuf = "^6.32"
