--- a/sygra/config/models.yaml
+++ b/sygra/config/models.yaml
@@ -26,7 +26,7 @@ mistralai:
 gpt4:
   model_type: azure_openai
   model: gpt-4-32k
-  # URL and api_key should be defined at .env file as SYGRA_GPT4_URL and SYGRA_GPT4_TOKEN
+  # URL and auth_token should be defined at .env file as SYGRA_GPT4_URL and SYGRA_GPT4_TOKEN
   api_version: 2024-05-01-preview
   parameters:
     max_tokens: 500
@@ -35,7 +35,7 @@ gpt4:
 gpt-4o:
   model_type: azure_openai
   model: gpt-4o
-  # URL and api_key should be defined at .env file as SYGRA_GPT-4O_URL and SYGRA_GPT-4O_TOKEN
+  # URL and auth_token should be defined at .env file as SYGRA_GPT-4O_URL and SYGRA_GPT-4O_TOKEN
   api_version: 2024-02-15-preview
   parameters:
     max_tokens: 500
@@ -44,7 +44,7 @@ gpt-4o:
 gpt-4o-mini:
   model_type: azure_openai
   model: gpt-4o-mini
-  # URL and api_key should be defined at .env file as SYGRA_GPT-4O-MINI_URL and SYGRA_GPT-4O-MINI_TOKEN
+  # URL and auth_token should be defined at .env file as SYGRA_GPT-4O-MINI_URL and SYGRA_GPT-4O-MINI_TOKEN
   api_version: 2024-08-01-preview
   parameters:
     max_tokens: 5000
@@ -52,7 +52,7 @@ gpt-4o-mini:
 
 #QWEN VL 72b deployed in vllm
 qwen_vl_72b:
-  # URL and api_key should be defined at .env file as SYGRA_QWEN_VL_72B_URL and SYGRA_QWEN_VL_72B_TOKEN
+  # URL and auth_token should be defined at .env file as SYGRA_QWEN_VL_72B_URL and SYGRA_QWEN_VL_72B_TOKEN
   hf_chat_template_model_id: Qwen/Qwen2.5-VL-72B-Instruct
   model_type: vllm
   parameters:
@@ -61,7 +61,7 @@ qwen_vl_72b:
 
 #QWEN 32B deployed in vllm
 qwen3_32b:
-  # URL and api_key should be defined at .env file as SYGRA_QWEN3_32B_URL and SYGRA_QWEN3_32B_TOKEN
+  # URL and auth_token should be defined at .env file as SYGRA_QWEN3_32B_URL and SYGRA_QWEN3_32B_TOKEN
   model_serving_name: qwen3_32b
   hf_chat_template_model_id: Qwen/Qwen3-32B
   model_type: vllm
