--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,16 @@ jobs:
         uses: actions/setup-python@v6
         with:
           python-version: 3.9
-          cache-dependency-path: |
-            **/poetry.lock
-            **/pyproject.toml
+      - name: Cache Poetry dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/pypoetry
+            ~/.local/share/pypoetry
+            ~/.venv
+          key: poetry-${{ runner.os }}-${{ hashFiles('**/pyproject.toml') }}
+          restore-keys: |
+            poetry-${{ runner.os }}-
       - name: Install Poetry
         run: pip install poetry
       - run: make setup-dev
@@ -42,9 +49,16 @@ jobs:
         uses: actions/setup-python@v6
         with:
           python-version: 3.9
-          cache-dependency-path: |
-            **/poetry.lock
-            **/pyproject.toml
+      - name: Restore Poetry dependencies cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/pypoetry
+            ~/.local/share/pypoetry
+            ~/.venv
+          key: poetry-${{ runner.os }}-${{ hashFiles('**/pyproject.toml') }}
+          restore-keys: |
+            poetry-${{ runner.os }}-
       - name: Install Poetry
         run: pip install poetry
       - run: make check-format
@@ -59,9 +73,16 @@ jobs:
         uses: actions/setup-python@v6
         with:
           python-version: 3.9
-          cache-dependency-path: |
-            **/poetry.lock
-            **/pyproject.toml
+      - name: Restore Poetry dependencies cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/pypoetry
+            ~/.local/share/pypoetry
+            ~/.venv
+          key: poetry-${{ runner.os }}-${{ hashFiles('**/pyproject.toml') }}
+          restore-keys: |
+            poetry-${{ runner.os }}-
       - name: Install Poetry
         run: pip install poetry
       - run: make check-lint
@@ -76,9 +97,16 @@ jobs:
         uses: actions/setup-python@v6
         with:
           python-version: 3.9
-          cache-dependency-path: |
-            **/poetry.lock
-            **/pyproject.toml
+      - name: Restore Poetry dependencies cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/pypoetry
+            ~/.local/share/pypoetry
+            ~/.venv
+          key: poetry-${{ runner.os }}-${{ hashFiles('**/pyproject.toml') }}
+          restore-keys: |
+            poetry-${{ runner.os }}-
       - name: Install Poetry
         run: pip install poetry
       - run: make test
@@ -93,9 +121,16 @@ jobs:
         uses: actions/setup-python@v6
         with:
           python-version: 3.9
-          cache-dependency-path: |
-            **/poetry.lock
-            **/pyproject.toml
+      - name: Restore Poetry dependencies cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/pypoetry
+            ~/.local/share/pypoetry
+            ~/.venv
+          key: poetry-${{ runner.os }}-${{ hashFiles('**/pyproject.toml') }}
+          restore-keys: |
+            poetry-${{ runner.os }}-
       - name: Install Poetry
         run: pip install poetry
       - run: make docs
